[package]
name = "roko-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
roko-macro = { path = "../roko-macro" }
roko-render = { path = "../roko-render" }
roko-html = { path = "../roko-html" }

wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.64"
features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window']
