[package]
name = "roko-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
roko-macro = { path = "../roko-macro" }
roko-dom = { path = "../roko-dom" }
roko-html = { path = "../roko-html" }

wasm-bindgen = "0.2"
futures = { version = "0.3.28", features = ["executor"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.37"
reqwest = "0.11.18"

[dependencies.web-sys]
version = "0.3.64"
features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window']
