[package]
name = "roko-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
proc-macro2 = "1.0.64"
quote = "1.0.29"
rsass = "0.28.0"
syn = { version = "2.0.25", features = ["full"] }
syn-rsx = "0.9.0"
