[package]
name = "roko-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roko-html = { path = "../roko-html" }
futures = { version = "0.3.28", features = ["executor"] }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.37"

[dependencies.web-sys]
version = "0.3.64"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'IdleDeadline',
    'console',
    'HtmlCollection',
]
