[package]
name = "roko-sofia-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.64"

roko-html = { path = "../roko-html" }
roko-http = { path = "../roko-http" }
roko-dom = { path = "../roko-dom" }
roko-macro = { path = "../roko-macro" }

futures = "0.3.28"
wasm-bindgen = "0.2.87"
